<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/edNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_categoria">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao" />

        <EditText
            android:id="@+id/edDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descricao_categoria">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvImageUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageUrl" />

        <EditText
            android:id="@+id/edImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/image_url_categoria">
            <requestFocus />
        </EditText>


        <Button
            android:id="@+id/sbSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_dados" />

    </LinearLayout>
</ScrollView>